styles/grid.scss
body {
	overflow-y: hidden;
	background-color: rgb(35, 36, 44);
}

* {
	padding: 0;
	margin: 0;
}

.grid-wrapper {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 95vh;
	position: relative;
}

.spiral-grid {
	display: grid;
	grid-template-columns: repeat(8, 50px);
	grid-template-rows: repeat(8, 50px);
	gap: 60px;
	position: relative;
	left: 11px;
}

.button {
	display: flex;
	position: relative;
	align-items: center;
	justify-content: center;
	background-color: lightgray;
	border: 1px solid #000;
	font-size: 16px;
	height: 65px;
	width: 65px;
	cursor: pointer;
	transition: background-color 0.3s ease;
}

.button:hover {
	background-color: #ddd;
}

.button-null {
	background-color: rgb(0, 255, 89);
	cursor: default;
	padding: 25px;
	position: relative;
	top: -23px;
	left: -20px;
}

/* Common padding for buttons */
.button-padding-x {
	padding: 0px 20px;
}

.button-padding-y {
	padding: 20px 0px;
}

/* Common relative positioning */
.button-left-adjust {
	position: relative;
	right: 40px;
}

.button-top-adjust {
	position: relative;
	bottom: 40px;
}

// Starting cell special styles
.button-0 {
	width: 153px;
	height: 180px;
	bottom: 65px;
	right: 43px;
	background-image: url('../assets/images/cells/startCell.png');
	background-size: cover;
	background-repeat: no-repeat;
	background-color: transparent;
	border: none;
	font-size: 0;
	pointer-events: none;
}

.button-7, .button-8, .button-9 {
	bottom: 21px;
}

.button-6 {
	bottom: 21px;
	height: 85px;
}

.button-10 {
	top: -61px;
	height: 85px;
}

.button-3,
.button-4,
.button-7,
.button-8,
.button-9,
.button-13,
.button-14,
.button-15,
.button-16,
.button-21,
.button-22,
.button-23,
.button-24,
.button-25,
.button-31,
.button-32,
.button-33,
.button-34,
.button-35,
.button-36,
.button-43,
.button-44,
.button-45,
.button-46,
.button-47,
.button-48,
.button-49,
.button-57,
.button-58,
.button-59,
.button-60,
.button-61,
.button-62,
.button-63 {
	@extend .button-padding-x;
}

.button-7,
.button-8,
.button-9,
.button-21,
.button-22,
.button-23,
.button-24,
.button-25,
.button-43,
.button-44,
.button-45,
.button-46,
.button-47,
.button-48,
.button-49 {
	@extend .button-left-adjust;
}

.button-2,
.button-5,
.button-6,
.button-10,
.button-11,
.button-12,
.button-17,
.button-18,
.button-19,
.button-20,
.button-26,
.button-27,
.button-28,
.button-29,
.button-30,
.button-37,
.button-38,
.button-39,
.button-40,
.button-41,
.button-42,
.button-50,
.button-51,
.button-52,
.button-53,
.button-54,
.button-55,
.button-56 {
	@extend .button-padding-y;
}

.button-2,
.button-10,
.button-11,
.button-12,
.button-26,
.button-27,
.button-28,
.button-29,
.button-30,
.button-50,
.button-51,
.button-52,
.button-53,
.button-54,
.button-55,
.button-56 {
	@extend .button-top-adjust;
}

.floating-cell {
	position: absolute;
	background-color: var(--extra-cell-color, #ffd700);
}

@media (max-width: 48em) {
	.spiral-grid {
		gap: 20px;
	}

	.button-padding-x {
		padding: 0px 5px;
		height: 70%;
	}

	.button-padding-y {
		padding: 5px 0px;
		width: 70%;
	}

	.button-left-adjust {
		position: relative;
		left: -25px;
	}

	.button-top-adjust {
		position: relative;
		top: -25px;
	}

	.button-null {
		background-color: rgb(0, 255, 89);
		cursor: default;
		padding: 15px;
		position: relative;
		top: -23px;
		left: -20px;
	}

	.button-63 {
		width: 35px;
		height: 35px;
	}

	.button-58 {
		height: 50px;
	}
}

@media (max-width: 35em) {
	.spiral-grid {
		gap: 10px;
	}

	.button-padding-x {
		padding: 0px 1px;
		height: 50%;
	}

	.button-padding-y {
		padding: 1px 0px;
		width: 50%;
	}

	.button-left-adjust {
		position: relative;
		left: -27px;
	}

	.button-top-adjust {
		position: relative;
		top: -27px;
	}

	.button-null {
		background-color: rgb(0, 255, 89);
		cursor: default;
		padding: 8px;
		position: relative;
		top: -22px;
		left: -20px;
	}

	.button-63 {
		width: 25px;
		height: 25px;
	}

	.button-58 {
		height: 50px;
	}
}

@media (max-width: 30em) {
	.spiral-grid {
		grid-template-columns: repeat(8, 40px);
		grid-template-rows: repeat(8, 40px);
		gap: 5px;
	}

	.button {
		font-size: 13px;
	}

	.button-padding-x {
		width: 37px;
		height: 50%;
	}

	.button-padding-y {
		height: 37px;
		width: 50%;
	}

	.button-left-adjust {
		position: relative;
		left: -19px;
	}

	.button-top-adjust {
		position: relative;
		top: -19px;
	}

	.button-null {
		background-color: rgb(0, 255, 89);
		cursor: default;
		width: 30px;
		height: 30px;
		position: relative;
		top: -13px;
		left: -13px;
	}

	.button-63 {
		width: 20px;
		height: 20px;
	}
}

